syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.reuters.proto.lib";
option java_outer_classname = "UserInfoProto";

service User {
    rpc add (UserInfo) returns (UserInfoList) {
    }   
    rpc remove (UserInfo) returns (UserInfoList) {
    }   
    rpc update (UserInfo) returns (UserInfoList) {
    }   
    rpc find (UserInfo) returns (UserInfoList) {
    }   
    rpc findById (UserInfo) returns (UserInfoList) {
    } 
    rpc findFromMem (UserInfo) returns (UserInfoList) {
    }   
}

message UserInfo {
    int32 id = 1;
    string name = 2;
    int32 age = 3;
}

message UserInfoList {
    repeated UserInfo userInfo = 1;
}
